crates/rr-core/tests/snapshots/text_test__auth_map.snap
---
source: crates/rr-core/tests/text_test.rs
expression: "files.get(\"src/auth/MAP.md\").unwrap()"
---
---
type: "rr-map"
format: 2
scope: "src/auth"
page: "root"
fidelity: "syntax"
index_hash: "blake3:7f17b5dfc410f43024c9a0269cefa583e3d9dc8b578d90e62359476dc753cca0"
api_hash: "blake3:423666d5b7a8c25c37f9c334c4b9269c036d19843e54f6f66018abead0efdaa4"
generated_hash: "blake3:a8c1821b7a733c59e8028c4e1ff0a52a2f0e8da2e3a86c23fb882c8731095ebc"
tokens: 171
budget: 2000
---
<!-- generated by rr format 2; edit only the purpose slot -->
# Repository map: src/auth

## Purpose
<!-- rr:slot purpose max=160 -->
TODO: describe this scope. Key terms: auth, token, claims, refresh, verify.
<!-- /rr:slot -->

## Children
_None._

## API
### src/auth/token.rs
- `auth::token::Claims` — `pub struct Claims` — [source](<token.rs#Claims>)
- `auth::token::refresh` — `pub(crate) fn refresh()` — [source](<token.rs#refresh>)
- `auth::token::verify_token` — `pub fn verify_token(token: &str) -> Claims` — [source](<token.rs#verify_token>)

## Tests
_None._

<!-- rr:merge-conflict: resolve one side, then run `rr map`; never hand-merge generated sections -->
