crates/rr-core/tests/snapshots/text_test__root_map.snap
---
source: crates/rr-core/tests/text_test.rs
expression: files.get(MAP_FILE_NAME).unwrap()
---
---
type: "rr-map"
format: 2
scope: "."
page: "root"
fidelity: "syntax"
index_hash: "blake3:7f17b5dfc410f43024c9a0269cefa583e3d9dc8b578d90e62359476dc753cca0"
api_hash: "blake3:9d16963b4f7d17a1be9dd4533fdf40a5655fee15694711ba89e63655ae4a9ae3"
generated_hash: "blake3:7faa44773fd110ac3cc8af8f99661e5fdb9d2fdb96f961fd4eb52eb4251ec00c"
tokens: 115
budget: 2000
---
<!-- generated by rr format 2; edit only the purpose slot -->
# Repository map: .

## Purpose
<!-- rr:slot purpose max=160 -->
TODO: describe this scope. Key terms: entry.
<!-- /rr:slot -->

## Children
- [src](<src/MAP.md>)
- [tests](<tests/MAP.md>)

## API
### lib.rs
- `entry` — `pub fn entry() -> u32` — [source](<lib.rs#entry>)

## Tests
_None._

<!-- rr:merge-conflict: resolve one side, then run `rr map`; never hand-merge generated sections -->
