crates/rr-core/tests/snapshots/text_test__symbols.snap
---
source: crates/rr-core/tests/text_test.rs
expression: files.get(SYMBOLS_PATH).unwrap()
---
---
type: "rr-symbols"
format: 2
fidelity: "syntax"
index_hash: "blake3:7f17b5dfc410f43024c9a0269cefa583e3d9dc8b578d90e62359476dc753cca0"
generated_hash: "blake3:1a9c564f097a9265d74157891fb9c62b233ea188170b95be392c7136d8e59b2f"
symbols: 5
---
<!-- generated by rr format 2; local and fully replaceable -->
# Symbols
<!-- columns: symbol<TAB>visibility<TAB>map<TAB>source<TAB>line<TAB>api_hash -->
auth%3A%3Atoken%3A%3AClaims	public	src/auth/MAP.md	src/auth/token.rs#Claims	1	blake3:423666d5b7a8c25c37f9c334c4b9269c036d19843e54f6f66018abead0efdaa4
auth%3A%3Atoken%3A%3Arefresh	crate	src/auth/MAP.md	src/auth/token.rs#refresh	6	blake3:423666d5b7a8c25c37f9c334c4b9269c036d19843e54f6f66018abead0efdaa4
auth%3A%3Atoken%3A%3Averify_token	public	src/auth/MAP.md	src/auth/token.rs#verify_token	2	blake3:423666d5b7a8c25c37f9c334c4b9269c036d19843e54f6f66018abead0efdaa4
entry	public	MAP.md	lib.rs#entry	1	blake3:9d16963b4f7d17a1be9dd4533fdf40a5655fee15694711ba89e63655ae4a9ae3
store%3A%3AStore	public	src/MAP.md	src/store.rs#Store	1	blake3:c8968645156850f2a82cf4b23dfe984f81e95dcc33084cb17e927c81f422b7e1
